Begin allowing user to create quiz

--- a/src/templates/dashboard2/index.html
+++ b/src/templates/dashboard2/index.html
@@ -99,9 +99,9 @@
                         Get started by creating your first quiz                     
                     </div>
                     <div class="text-center">
-                        <button class="btn btn-primary site-button mx-auto justify-content-center my-1">
+                        <a href="{% url 'create_quiz' %}" class="btn btn-primary site-button mx-auto justify-content-center my-1">
                             Create quiz
-                        </button>
+                        </a>
                     </div>                
                 </div>
             </div>
