--- a/src/templates/home_site2/includes/header.html
+++ b/src/templates/home_site2/includes/header.html
@@ -227,7 +227,7 @@
                 {% if messages %}
                     {% autoescape off %}
                         {% for message in messages %}
-                            <div class="alert alert-warning alert-dismissible fade show mx-auto text-white"
+                            <div class="alert alert-warning alert-dismissible fade show mx-auto text-dark"
                                 role="alert">
                                 <center>
                                     <p>{{message}}</p>
