--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -11,7 +11,7 @@
                         <h4 class="text-black fs-20"></h4>
                         <p class="fs-13 mb-0 text-black">{{user_quiz.name}}</p>
                     </div>
-                    <div class="card-action card-tabs mr-4 mt-3 mt-sm-0 mb-3">
+                    {% comment %} <div class="card-action card-tabs mr-4 mt-3 mt-sm-0 mb-3">
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#All" role="tab" aria-selected="false">All</a>
@@ -23,28 +23,11 @@
                                 <a class="nav-link" data-toggle="tab" href="#Finished" role="tab">Finished</a>
                             </li>
                         </ul>
-                    </div>
-                    <button type="button" class="btn btn-primary mb-2" 
-                    data-toggle="modal" data-target="#exampleModalCenter"> Add quiz page </button>
+                    </div> {% endcomment %}
+                    <a href="{% url 'quiz_page_add' user_quiz.id %}" class="btn btn-primary site-button mb-2" 
+                    > Add quiz page </a>
            
-                    <div class="modal fade" id="exampleModalCenter" style="display: none;" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title">Modal title</h5>
-                                    <button type="button" class="close" data-dismiss="modal"><span>×</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-danger light" data-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                  
                 </div>
                 <div class="card-body tab-content pt-2">
                     <div class="tab-pane active show fade" id="Unifinshed">
