--- a/src/quizCreation/templates/element_forms/text.html
+++ b/src/quizCreation/templates/element_forms/text.html
@@ -5,10 +5,12 @@
 </div>
 <div class="modal-body">
     <form  
+    id="addTextElementForm "
     hx-post={% url 'add_text_element' user_quiz.id quiz_page.id %}
     hx-target='#modalContent'
     hx-swap=outerHTML
-    hx-encoding="multipart/form-data"
+    hx-sync="closest form:abort"
+
     >
     {{form.media}}
     {% for field in form %}
@@ -19,7 +21,9 @@
         <button hx-get={% url 'all_element_swatches' user_quiz.id quiz_page.id %} hx-trigger=click
          hx-target='#modalContent' hx-swap=outerHTML class="btn btn-danger light" 
          data-dismiss="modal">Cancel</button>
-        <button type="submit" class="btn btn-primary site-button">Add</button>  
+        <button type="submit" onclick="for ( instance in CKEDITOR.instances ) {
+                CKEDITOR.instances[instance].updateElement();
+            }" class="btn btn-primary site-button">Add</button>  
     </div>
     </form>
 
