Added ability to move quiz page up

--- a/src/quizCreation/templates/element_forms/all_elements_swatches.html
+++ b/src/quizCreation/templates/element_forms/all_elements_swatches.html
@@ -6,7 +6,7 @@
     </div>
     <div class="modal-body">
         <form action="" 
-        hx-post={% url 'quiz_page_element_add' user_quiz.id quiz_page.number %}
+        hx-post={% url 'quiz_page_element_add' user_quiz.id quiz_page.id %}
         hx-target='#modalContent'
         hx-swap=innerHTML
         >
