--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -9,7 +9,7 @@
                 <div class="card-header d-sm-flex flex-wrap d-block pb-0 border-0">
                     <div class="mr-auto pr-3 mb-3">
                         <h4 class="text-black fs-20"></h4>
-                        <p class="fs-13 mb-0 text-black">{{user_quiz.name}}</p>
+                        <p class="fs-13 mb-0 text-black">Editing quiz: {{user_quiz.name}}</p>
                     </div>
                     {% comment %} <div class="card-action card-tabs mr-4 mt-3 mt-sm-0 mb-3">
                         <ul class="nav nav-tabs" role="tablist">
@@ -24,9 +24,32 @@
                             </li>
                         </ul>
                     </div> {% endcomment %}
-                    <a href="{% url 'quiz_page_add' user_quiz.id %}" class="btn btn-primary site-button mb-2" 
-                    > Add quiz page </a>
-           
+                    
+
+                    <button type="button" class="btn btn-primary site-button mb-2" data-toggle="modal" data-target="#exampleModalCenter">Add quiz page</button>
+
+                    <div class="modal fade" id="exampleModalCenter">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title">Add quiz page</h5>
+                                    <button type="button" class="close" data-dismiss="modal"><span>×</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <form action="{% url 'quiz_page_add' user_quiz.id %}" 
+                                     method="POST"
+                                    >
+                                    {% csrf_token %}
+                                    <div class="text-center">
+                                        <button type="button" class="btn btn-danger light" data-dismiss="modal">Cancel</button>
+                                        <button type="submit" class="btn btn-primary site-button">Continue</button>
+                                    </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                   
                 </div>
                 <div class="card-body tab-content pt-2">
@@ -49,8 +72,7 @@
                                     class="fs-24 text-primary mb-0 mt-2"><i class="fa fa-chevron-down"></i></p>
                                 </div>
                                 <div class="info mb-3">
-                                    <h4 class="fs-20 "><a href="workout-statistic.html" class="text-black">Page {{page.number}} {{page.id}}</a></h4>
-                                    {% comment %} <span class="text-danger font-w600">UNFINISHED</span> {% endcomment %}
+                                    <h4 class="fs-20 "><p class="text-black">({{page.number}}) {{page.name}}</p></h4>
                                 </div>
                             </div>
                             <a href="{% url 'quiz_page_edit' user_quiz.id page.id %}">
