--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -41,6 +41,12 @@
                                      method="POST"
                                     >
                                     {% csrf_token %}
+                                    <div class="form-group">
+                                        <label class="text-black font-w600">Enter a name for your quiz page<span class="required">*</span></label>
+                                        <input type="text" class="form-control" name="name" required maxlength='300' placeholder="Enter name here">
+                                        Note: Name is only shown to you and not displayed to users
+                                    </div>
+
                                     <div class="text-center">
                                         <button type="button" class="btn btn-danger light" data-dismiss="modal">Cancel</button>
                                         <button type="submit" class="btn btn-primary site-button">Continue</button>
