--- a/src/quizCreation/templates/element_forms/text.html
+++ b/src/quizCreation/templates/element_forms/text.html
@@ -17,7 +17,7 @@
     {{field}}
     {% endfor %}
 
-    <div class="">
+    <div class="my-3">
         <button hx-get={% url 'all_element_swatches' user_quiz.id quiz_page.id %} hx-trigger=click
          hx-target='#modalContent' hx-swap=outerHTML class="btn btn-danger light" 
          data-dismiss="modal">Cancel</button>
