--- a/src/quizCreation/templates/quiz_page_edit.html
+++ b/src/quizCreation/templates/quiz_page_edit.html
@@ -3,21 +3,22 @@
 {% load static %}
 {% block content %}
 
+
+<div
+hx-trigger=load
+hx-get={% url 'get_quiz_page_elements' user_quiz.id quiz_page.id %}
+>
+
+</div>
+
     <div class="row px-5">
     <div class="mx-auto w-100 border border-dark p-4 text-center"  style="border-style:dashed !important">
-        
-        {% for element in quiz_page_elements %}
-        <div>
-            {{element.id}}
-        </div>
-        {% endfor %}
-      
             <div class="">
                 <button type="button" class="btn btn-primary site-button mb-2" 
                 data-toggle="modal" data-target="#exampleModalCenter">
                     Select an element to add
                     <i class="fa fa-plus"></i>        
-                </button>
+                </button> 
                 <div class="modal fade" id="exampleModalCenter" style="display: none;" aria-hidden="true">
                     <div  class="modal-dialog modal-dialog-centered" role="document">
                         {% include 'element_forms/all_elements_swatches.html' %}
@@ -25,8 +26,6 @@
                 </div>
             </div>
     </div>
-
-    
     </div>
 
     <!--**********************************
