--- a/src/quizCreation/templates/quiz_page_elements.html
+++ b/src/quizCreation/templates/quiz_page_elements.html
@@ -14,20 +14,36 @@
     {% endif %}
 
     {% for element in quiz_page_elements %}
+
+
     <div class="row px-5 my-3">
         <i class="py-1">
             {{element.type}}
-        </i> 
+        </i> {{element.element.page_element.position}}
         
         <div class="mx-auto w-100 border border-dark p-2"  style="border-style:dashed !important">
             <span 
             hx-confirm="Are you sure you want to delete this {{element.type}}?"
             hx-target='#page_elements'
-            hx-delete={% url 'delete_page_element' user_quiz.id quiz_page.id element.element.page_element.id %} class="float-right ml-auto d-flex"><i class="mdi mdi-close"></i></span>
-            <div class="p-4">
+            hx-delete={% url 'delete_page_element' user_quiz.id quiz_page.id element.element.page_element.id %} class="float-right ml-auto d-flex fs-24 text-dark mb-0 mt-2"><i class="mdi mdi-close"></i></span>
+            <div class="p-4 d-flex align-items-center ">
+                <div class="list-icon mr-3 mb-3">
+                    <p type="button" 
+                        hx-get={% url 'move_element_up' user_quiz.id quiz_page.id element.element.page_element.id %}
+                        hx-target='#page_elements'
+                        hx-swap=outerHTML
+                        class="fs-24 text-dark mb-0 mt-2"><i class="fa fa-chevron-up"></i></p>
+                    <p type="button"
+                        hx-get={% url 'move_element_down' user_quiz.id quiz_page.id element.element.page_element.id %}
+                        hx-target='#page_elements'
+                        hx-swap=outerHTML       
+                        class="fs-24 text-dark mb-0 mt-2"><i class="fa fa-chevron-down"></i></p>
+                </div>
                 <br>
                 {% autoescape off %}
-                {{element.element.content}}
+                <div class="d-block">
+                    {{element.element.content}}
+                </div>
                 {% endautoescape %}
             
                 {{element.id}}
