--- a/src/quizCreation/templates/quiz_page_edit.html
+++ b/src/quizCreation/templates/quiz_page_edit.html
@@ -3,6 +3,8 @@
 {% load static %}
 {% block content %}
 
+<p class="fs-13 mb-3 text-black">Editing quiz page {{quiz_page.name}}</p>
+
 
 <div
 hx-trigger=load
