--- a/src/quizCreation/templates/quiz_page_elements.html
+++ b/src/quizCreation/templates/quiz_page_elements.html
@@ -19,13 +19,10 @@
     <div class="row px-5 my-3">
         <i class="py-1">
             {{element.type}}
-        </i> {{element.element.page_element.position}}
+        </i> 
         
         <div class="mx-auto w-100 border border-dark p-2"  style="border-style:dashed !important">
-            <span 
-            hx-confirm="Are you sure you want to delete this {{element.type}}?"
-            hx-target='#page_elements'
-            hx-delete={% url 'delete_page_element' user_quiz.id quiz_page.id element.element.page_element.id %} class="float-right ml-auto d-flex fs-24 text-dark mb-0 mt-2"><i class="mdi mdi-close"></i></span>
+            <span type="button" class="float-right ml-auto fs-24 text-dark mb-0 mt-2 align-items-center">Edit <i class="fa fa-edit"></i></span>
             <div class="p-4 d-flex align-items-center ">
                 <div class="list-icon mr-3 mb-3">
                     <p type="button" 
@@ -39,15 +36,16 @@
                         hx-swap=outerHTML       
                         class="fs-24 text-dark mb-0 mt-2"><i class="fa fa-chevron-down"></i></p>
                 </div>
+
                 <br>
                 {% autoescape off %}
-                <div class="d-block">
+                <div>
                     {{element.element.content}}
                 </div>
                 {% endautoescape %}
-            
-                {{element.id}}
+                
             </div>
+            <span type="button" hx-confirm="Are you sure you want to delete this {{element.type}}?" hx-target='#page_elements' hx-delete={% url 'delete_page_element' user_quiz.id quiz_page.id element.element.page_element.id %} class="float-right ml-auto d-flex fs-24 text-dark mb-0 mt-2">Delete <i class="mdi mdi-close"></i></span>
         </div>
     </div>
     {% endfor %}
