--- a/src/quizCreation/templates/element_forms/text.html
+++ b/src/quizCreation/templates/element_forms/text.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h5 class="modal-title">Add text element</h5>
+    <h5 class="modal-title">{% if edit %}Edit {% else %} Add {% endif %} text element</h5>
     <button type="button" class="close" data-dismiss="modal"><span>×</span>
     </button>
 </div>
@@ -23,7 +23,7 @@
          data-dismiss="modal">Cancel</button>
         <button type="submit" onclick="for ( instance in CKEDITOR.instances ) {
                 CKEDITOR.instances[instance].updateElement();
-            }" class="btn btn-primary site-button">Add</button>  
+            }" class="btn btn-primary site-button">{% if edit %}Save{% else %}Add{% endif %}</button>  
     </div>
     </form>
 
