--- a/src/quizCreation/templates/element_forms/CharInput.html
+++ b/src/quizCreation/templates/element_forms/CharInput.html
@@ -9,7 +9,7 @@
     {% if edit %}
     hx-post={% url 'edit_char_input_element' user_quiz.id quiz_page.id quiz_page_element.id %}
     hx-target='#page_elements'
-    hx-swap=innerHTML
+    hx-swap=outerHTML
     {% else %}
     hx-post={% url 'add_char_input_element' user_quiz.id quiz_page.id %}
     hx-target='#modalContent'
