--- a/src/quizCreation/templates/quiz_page_element_edit_modal.html
+++ b/src/quizCreation/templates/quiz_page_element_edit_modal.html
@@ -1,9 +1,9 @@
 
-<div class="modal fade" id="editModal" style="display: none;" aria-hidden="true">
+<div class="modal fade text-center" id="editModal" style="display: none;" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div id="editModalContent" class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span>×</span>
+                <button id="" type="button" class="close" data-dismiss="modal"><span>×</span>
                 </button>
             </div>
             <div class="modal-body">
