--- a/src/templates/dashboard2/index.html
+++ b/src/templates/dashboard2/index.html
@@ -93,7 +93,66 @@
                         {% comment %} <p class="fs-13 mb-0 text-black">Lorem ipsum dolor sit amet, consectetur</p> {% endcomment %}
                     </div>
 
+                </div> 
+                {% if quizes %}
+                               <div class="card-body tab-content pt-2">
+ 
+                   
                 </div>
+                <div class="card-body py-2   mt-2 ">
+                    <div class="mx-auto ">
+                        Your quizes                     
+                    </div>
+                    <div class="tab-pane active show fade" id="Unifinshed"
+                    >
+                        {% for quiz in quizes %}
+                       
+                        <div style="background-color:rgba(0, 125, 136, 0.1)" 
+                        
+                        class="card-header d-sm-flex d-block pb-0 border-0 py-3 list-row align-items-center mb-2 col-lg-9 mx-auto justify-content-center">
+                            
+                            <div class="col-xl-5 col-xxl-8 col-lg-6 col-sm-8 d-flex align-items-center">
+                                <div class="list-icon mr-3 mb-3">
+               
+
+                              
+                                </div>
+                                <div class="info ">
+                                    <h4 class="fs-20 "><p class="text-black">{{quiz.name}}</p></h4>
+                                </div>
+                            </div>
+                            <div class="ml-auto mr-4 pr-1">
+
+                            <a class="d-block " href="{% url 'edit_quiz' quiz.id %}">
+                                <div class="float-right fs-24 text-dark">Edit <i class="fa fa-edit"></i></div>
+                            </a>
+                            
+                             <a href="{% url 'quiz_delete' quiz.id %}" class="d-block "
+                           
+                            > 
+                            <div class="float-right fs-24 text-dark">Delete <i class="fa fa-trash"></i></div>
+                            </div>
+                            
+                        </a>
+
+                        </div>
+
+                       
+
+                   
+                        {% endfor %}
+
+                
+                    </div>
+
+                    <div class="text-center">
+                        <a style="float:right;" href="{% url 'create_quiz' %}" class="btn btn-primary site-button mx-auto justify-content-end my-1">
+                            Create quiz
+                        </a>
+                    </div>                 
+                </div>
+                {% else %}
+
                 <div class="card-body py-4 mt-2 justify-content-center">
                     <div class="mx-auto justify-content-center text-center">
                         Get started by creating your first quiz                     
@@ -104,6 +163,7 @@
                         </a>
                     </div>                
                 </div>
+{% endif %}
             </div>
         </div>
 
