--- a/src/templates/dashboard2/index.html
+++ b/src/templates/dashboard2/index.html
@@ -95,11 +95,8 @@
 
                 </div> 
                 {% if quizes %}
-                               <div class="card-body tab-content pt-2">
- 
-                   
-                </div>
-                <div class="card-body py-2   mt-2 ">
+   
+                <div class="card-body py-0 ">
                     <div class="mx-auto ">
                         Your quizes                     
                     </div>
