--- a/src/quizRender/templates/preview_quiz.html
+++ b/src/quizRender/templates/preview_quiz.html
@@ -4,6 +4,40 @@
 {% block content %}
 
 <h5>Preview</h5>
+<div class="col-lg-9 mx-auto p-3 bg-white border-2 bg-shadow">
+
+    {% for element in quiz_page.get_quiz_page_elements %}
+    <br><br>
+    {% if element.get_element_type.type == 'Text element' or  element.get_element_type.type == 'Char element' or  element.get_element_type.type == 'Email element' or element.get_element_type.type == 'Number element' or element.get_element_type.type == 'Multiple choice question' %}
+    <i> <b>{{element.get_element_type.element.title}}</b>
+        {% autoescape off %}
+        <i> <b>{{element.get_element_type.element.content}}</b>
+            {% endautoescape %}
+
+    {% endif %}
+
+    {{element.get_element_type.type}}
+
+    {% if element.get_element_type.type == 'Char input element'  %}
+
+        <input type="text">
+    {% elif element.get_element_type.type == 'Text input element'  %}
+
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+    {% elif element.get_element_type.type == 'Email input element'  %}
+            <input type="email">
+    {% elif element.get_element_type.type == 'Number input element'  %}
+            <input type="number">
+    {% elif element.get_element_type.type == 'Multiple choice question'  %}
+    <br> <br>
+    Question choices: 
+    <br>
+
+    {% endif %}
+
+    {% endfor %}
+
+</div>
 
 
 
