--- a/src/templates/dashboard2/index.html
+++ b/src/templates/dashboard2/index.html
@@ -104,9 +104,14 @@
                     >
                         {% for quiz in quizes %}
                        
-                        <div style="background-color:rgba(0, 125, 136, 0.1)" 
+                        <div style="background-color:rgba(0, 125, 136, 0.1);
+                            border-radius: 1.25rem;
+                            -webkit-transition: all 0.5s;
+                            -ms-transition: all 0.5s;
+                            transition: all 0.5s;
+                            " 
                         
-                        class="card-header d-sm-flex d-block pb-0 border-0 py-3 list-row align-items-center mb-2 col-lg-9 mx-auto justify-content-center">
+                        class="plan-list list-row d-sm-flex d-block  py-3 list-row align-items-center mb-2 col-lg-9 mx-auto justify-content-center">
                             
                             <div class="col-xl-5 col-xxl-8 col-lg-6 col-sm-8 d-flex align-items-center">
                                 <div class="list-icon mr-3 mb-3">
