--- a/src/quizRender/templates/quiz_form.html
+++ b/src/quizRender/templates/quiz_form.html
@@ -1,11 +1,16 @@
 <form id="quizRenderPreview"
-{% comment %} hx-post={% url '' %} {% endcomment %}
+
+hx-post={% url 'next_page_quiz_preview' quiz_page.quiz.id quiz_page.number %}
 hx-swap=outerHTML
+hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
+hx-encoding="multipart/form-data"
 class="d-flex">
+TEST  {{quiz_page.number}} {{quiz_page.id}}
+
 
     <div class="col-lg-9 mx-auto p-3 bg-white border-2 bg-shadow">
 
-        {% for element in quiz_page.get_quiz_page_elements %}
+    {% for element in quiz_page.get_quiz_page_elements %}
         <br><br>
         {% if element.get_element_type.type == 'Text element' or  element.get_element_type.type == 'Char element' or  element.get_element_type.type == 'Email element' or element.get_element_type.type == 'Number element' or element.get_element_type.type == 'Multiple choice question' %}
         <b>{{element.get_element_type.element.title}}</b>
@@ -31,27 +36,36 @@ class="d-flex">
         {% elif element.get_element_type.type == 'Number input element'  %}
                 <input class="form-control" type="number">
         {% elif element.get_element_type.type == 'Multiple choice question'  %}
-        <div class="row mx-auto justify-content-center p-1" style="gap: 1.5rem !important;">
+ 
+
+        <select  name="{{question.id}}" id="multiC_{{element.get_element_type.element.id}}" class="form-select d-none" multiple 
+         >
+        {% for option in element.get_element_type.element.get_multiple_choice_choices %}
+        <option value="{{option.id}}" id="option_{{option.id}}">{{option.choice}}</option>
+            {% endfor %}
+        </select>
+
+        <div class="row justify-content-center  p-1" style="gap: 1.5rem !important;">
             {% for option in element.get_element_type.element.get_multiple_choice_choices %}
 
                 <div role="button" onclick="SelectDeselect(this);" id="card_{{option.id}}"
-                    class="card border-3 col-12 col-sm-5" data-option={{option.id}} style="min-width:8rem;border:3px solid white;margin-bottom: 0.5rem !important;">
+                    class=" card_choice  border-3 col-12 col-sm-5 {% if option.skip_to_next and not edit_preference %}skip_to_next{% endif %} {% if option.can_only_be_selected %}can_only_be_selected{% endif %}" data-option={{option.id}} style="min-width:8rem;border:3px solid white;">
                     <div style="" class="text-center py-4">
                         <h4 class="card-title">{{option.choice}}</h4>
-                        {% comment %} {% if option.option_image_icon %}
+                        {% if option.option_image_icon %}
                             <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
-                        {% endif %} {% endcomment %}
+                        {% endif %}
                     </div>
                 </div>
 
+                
             {% endfor %}
         </div>
 
         <script>
             function SelectDeselect(e) {
-                console.log("SelectDeselect")
-                option_id = "#card_" + e.getAttribute('data-option')
-                console.log(option_id)
+                option_id = "#option_" + e.getAttribute('data-option')
+
                 optionToSelect = document.querySelector(option_id)
                 if (optionToSelect.selected){
                     e.classList.remove('border-success')
@@ -63,16 +77,70 @@ class="d-flex">
                     e.classList.remove('border-white')
 
                     optionToSelect.selected = true;
+                    
+                    classes = e.classList
+                    {% comment %} if skip to next then submit form {% endcomment %}
+                    if (classes.contains('skip_to_next') && !(previous_answers)) {
+                        document.querySelector('#submitQuestionBtn').click()
+                    }
+                    if (classes.contains('can_only_be_selected')) {
+
+                        options_cards = Array.from(e.parentNode.querySelectorAll('.card_choice'))
+                        for (let i = 0; i < options_cards.length; i++) {
+                            if (options_cards[i] != e){
+                                options_cards[i].classList.remove('border-success')
+                                options_cards[i].classList.add('border-white')
+
+                                option_id = "#option_" + options_cards[i].getAttribute('data-option')
+                                optionToSelect = document.querySelector(option_id)
+                                optionToSelect.selected = false;
+                            }
+
+                    }
+                    }
+
+                    {% comment %} For loop over all cards excluding current {% endcomment %}
+
+                    options_cards = Array.from(e.parentNode.querySelectorAll('.card_choice.can_only_be_selected'))
+                    for (let i = 0; i < options_cards.length; i++) {
+                        if (options_cards[i] != e){
+                            options_cards[i].classList.remove('border-success')
+                            options_cards[i].classList.add('border-white')
+
+                            option_id = "#option_" + options_cards[i].getAttribute('data-option')
+                            optionToSelect = document.querySelector(option_id)
+                            optionToSelect.selected = false;
+                        }
+
+                }
+                    
                 }
             };
 
         </script>
+            
+            {% endif %}
+            
+    {% endfor %}
 
-        {% endif %}
+    {% if not first_page %}
+    <a class="float-left"
+     hx-get={% url 'previous_page_preview' quiz_page.quiz.id quiz_page.number %}
+    hx-swap=outerHTML
+    hx-target=#quizRenderPreview
+    
+    >
+      Previous page
+    </a>
+    {% endif %}
 
-        {% endfor %}
-        <div>
-            <button type="submit" class="btn btn-primary float-right">Continue</button>
-        </div>
+
+    {% if not quiz_page.is_last_page %}
+    <div>
+        <button type="submit" class="btn btn-primary float-right">Continue</button>
     </div>
-</form>
+    {% else %}
+    <h6 class="text-center">End of quiz</h6>
+    {% endif %}
+</div>
+    </form>
